umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrides_h2se.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrides
atom_typing:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Se#h2#n2"
    bonds: []
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Se#h2#n2"
    bonds: []
