umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrides_sih4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrides
atom_typing:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Si#h4"
    bonds: []
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "Si#h4"
    bonds: []
