umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_2-methylbut-2-ene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DbG
    atoms:
      - "{CH3v1}"
      - "{Cv4}"
      - "{CHv3}"
      - "{CH3v1}"
      - "{CH3v1}"
    bonds:
      - "-"
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DbG
    atoms:
      - "{CH3v1}"
      - "{Cv4}"
      - "{CHv3}"
      - "{CH3v1}"
      - "{CH3v1}"
    bonds:
      - "-"
      - "="
      - "-"
      - "-"
